styles/style.css
/* ... */
#tool_button,
#output_button,
#tool_button_2 {
  display: flex;
  justify-content: center;
  align-items: center;
  background-image: url(../assets/medias/trace.svg);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  width: 466px;
  height: 113px;
  padding: 10px;
  font-family: 'Open Sans', sans-serif;
  font-size: 52px;
  font-weight: 800;
  text-align: center;
  color: #fff;
  cursor: pointer;
}

#tool_button_2 {
  padding-right: 80px;
}

#tool_button {
  padding-right: 40px;
}

#output_button {
  padding-right: 104px;
}

#output_button,
#tool_button_2 {
  display: none;
}

#tool_button svg,
#output_button svg,
#tool_button_2 svg {
  width: 60px;
  position: relative;
  height: 100%;
}

button span {
  display: block;
  margin-left: 10px;
  margin-right: 10px;
}

/* SECTION TOOL */
#tool {
  display: none;
  flex-direction: column;
  /* justify-content: center; */
  align-items: center;
  width: 100%;
  padding: 0 4rem;
  /*  margin-top: 30px; */

  z-index: 1;
}

#tool .tool_content {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  /*  margin-bottom: 30px; */
}

.tool_content--block {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 100%;
  margin-top: 20px;
}

.tool_content--block--inputs {
  display: flex;
  align-items: center;
  width: 100%;
}

.tool_content--block--inputs--select {
  position: relative;
  display: flex;
  align-items: center;
  gap: 20px;
}

.table_select {
  position: relative;
}

.tool_content--block--inputs--select label {
  white-space: nowrap;
  font-weight: 800;
  font-size: 22px;
  color: #606773;
}

select {
  display: flex;
  align-items: center;
  border: none;
  width: 100%;
  height: 54px;
  background-color: #fff;
  font-family: 'Open Sans', sans-serif;
  font-weight: 800;
  font-size: 22px;
  color: #606773;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  background-image: url("data:image/svg+xml;utf8,<svg fill='%23D64123' height='40' viewBox='0 0 24 24' width='40' xmlns='http://www.w3.org/2000/svg'><path d='M7 10l5 5 5-5z'/><path d='M0 0h24v24H0z' fill='none'/></svg>");
  background-repeat: no-repeat;
  background-position-x: 100%;
  background-position-y: 50%;
  padding: 0 8px;
}

.tool_content--block--inputs--select select {
  min-width: 220px;
  padding-left: 30px;
}

.table_select select {
  font-size: 15px;
}

select,
option:checked {
  line-height: 1.2;
  width: 100%;
  white-space: normal;
  word-wrap: break-word;
  max-width: 100%;
}

select[name='presentation'],
select[name='presentation'] option:checked {
  line-height: 1.5;
}

.tool_content--block--inputs--checkbox {
  display: flex;
  align-items: center;
  gap: 20px;
  margin-left: 40px;
}

.container {
  display: block;
  position: relative;
  padding-left: 35px;
  cursor: pointer;
  font-size: 22px;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.container input {
  position: absolute;
  opacity: 0;
  cursor: pointer;
  height: 0;
  width: 0;
}

.checkmark {
  position: absolute;
  top: 0;
  left: 0;
  height: 25px;
  width: 25px;
  background-color: #fff;
}

.container input:checked~.checkmark {
  background-color: #fff;
}

.checkmark:after {
  content: '';
  position: absolute;
  display: none;
}

.container input:checked~.checkmark:after {
  display: block;
}

.container .checkmark:after {
  left: 7px;
  top: 3px;
  width: 10px;
  height: 15px;
  border: solid #d64123;
  border-width: 0 3px 3px 0;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
}

.tool_content--block--buttons {
  display: flex;
  gap: 40px;
}

#default_view,
#clear_button,
#reset_calculator {
  width: 220px;
  height: 54px;
  padding: 18px 40px;
  background-color: #f2856f;
  font-size: 22px;
  font-weight: bold;
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  color: #fff;
  cursor: pointer;

}

#reset_calculator {
  justify-self: flex-end;
  margin-right: 80px;
}

#clear_button {
  background-color: #841532;
}

.tool_content--table {
  width: 100%;
  margin-top: 30px;
}

#tables_body {
  margin-top: 0;
}

#table_calculator_tbody tr:not(.col_add_row):not(.total_info_tr) td:nth-child(2),
#table_calculator_tbody tr:not(.col_add_row):not(.total_info_tr) td:nth-child(3),
#table_calculator_tbody tr:not(.col_add_row):not(.total_info_tr) td:nth-child(4) {
  background-color: #fce7e2
}

#table_calculator_tbody tr.total_info_tr td:nth-child(1),
#table_calculator_tbody tr.total_info_tr td:nth-child(2),
#table_calculator_tbody tr.total_info_tr td:nth-child(3) {
  border: none;
}

table {
  position: relative;
  border-collapse: collapse;
  table-layout: fixed;
}

.tool_content--table thead {
  color: #fff;
}

.tool_content--table thead tr th {
  font-weight: 800;
  font-size: 16px;
  padding: 5px;
  text-align: center;
}

.tool_content--table thead tr:first-child .col_clear {
  height: 50px;
  background-color: #d64123;
  background-image: url(../assets/medias/icon_mini_erase.png);
  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
  cursor: pointer;
}

.tool_content--table thead tr:last-child th {
  background-color: #5c6772;
  border-left: 1px solid #b0b7be;
  border-right: 1px solid #b0b7be;
}

.tool_content--table thead tr:last-child th.delete_row_header {
  background-color: transparent;
  border: none;
}

.tool_content--table tbody tr td {
  font-size: 16px;
  padding: 5px;
  text-align: center;
  border: 1px solid #b0b7be;
}

.tool_content--table tbody .col_1,
.tool_content--table tbody .col_3,
.tool_content--table tbody .col_6,
.tool_content--table tbody .col_9,
.tool_content--table tbody .col_10,
.tool_content--table tbody .col_11,
.tool_content--table tbody .col_12 {
  background-color: #fce7e2;
}

.col_add_row td:first-child {
  background-color: #f4f7ff;
}
/* ... */

